magit (3.3.0+git20240412.1.da14749d-1) UNRELEASED; urgency=medium

  * New upstream snapshot (Closes: #1068875).

 -- Aymeric Agon-Rambosson <aymeric.agon@yandex.com>  Sun, 14 Apr 2024 00:31:27 +0200

magit (3.3.0+git20231219.1.c7ab6931-1) unstable; urgency=medium

  * New upstream snapshot.
  * d/patches:
    - Drop 0004-tramp-test-overide.patch (not applicable anymore)
    - Drop repair-magit-get-and-submodule-tests.patch (applied upstream)
    - Drop fix-magit-test-unable-to-find-compat-through-with-editor.patch
      (applied upstream)
    - Refreshed other patches
  * d/control:
    - Add minimal version to elpa-transient Build-Depends.
    - Keep only necessary Build-Depends.
  * Remove obsolete d/*.prerm files.
  * d/copyright: Update copyright years.
  * d/rules:
    - Remove unneeded dh_clean override.
    - Remove EMACS_INHIBIT_AUTOMATIC_NATIVE_COMPILATION environment
      variable (tests run fine without it).
    - Remove GIT_*, LC_ALL environment variables (not needed anymore).
    - Remove DEB_VERSION_UPSTREAM environment variable (not needed
      anymore).
  * Update d/*.elpa files in line with upstream changes.
  * Add temporary patch to reformat multiline Package-Requires to
    monoline.
  * Improve documentation packaging (more formats, added doc-base).

 -- Aymeric Agon-Rambosson <aymeric.agon@yandex.com>  Tue, 26 Dec 2023 18:56:47 +0100

magit (3.3.0-3) unstable; urgency=medium

  [ Aymeric Agon-Rambosson ]
  * Repair watch file.

  [ Xiyue Deng ]
  * Reformat Build-Depends to list one per line in alphabetic order to
    make further changes easier to track.
  * Fix `make test` failure.  Closes: #1042289.
    - Add elpa-compat to Build-Depends.
    - Cherrypick upstream patch partially to detect compat in LOAD_PATH.
  * Update Standards-Version to 4.6.2.  No change needed.

 -- Sean Whitton <spwhitton@spwhitton.name>  Sat, 29 Jul 2023 10:24:44 +0100

magit (3.3.0-2) unstable; urgency=medium

  [ Aymeric Agon-Rambosson ]