@@ -10,7 +10,7 @@ autogenerated file. This causes problem with the clean target.
 
 --- a/default.mk
 +++ b/default.mk
-@@ -104,7 +104,7 @@ ELS += git-rebase.el
+@@ -105,7 +105,7 @@ ELS += git-rebase.el
  ELS += magit-bookmark.el
  ELCS = $(ELS:.el=.elc)
  ELMS = magit.el $(filter-out $(addsuffix .el,$(PACKAGES)),$(ELS))
