@@ -20,9 +20,9 @@ meantime.
 -;;     (git-commit "3.3.0")
 -;;     (magit-section "3.3.0")
 -;;     (seq "2.24")
--;;     (transient "0.5.0")
+-;;     (transient "0.5.3")
 -;;     (with-editor "3.3.2"))
-+;; Package-Requires: ((emacs "25.1") (compat "29.1.4.4") (dash "2.19.1") (git-commit "3.3.0") (magit-section "3.3.0") (seq "2.24") (transient "0.5.0") (with-editor "3.3.2"))
++;; Package-Requires: ((emacs "25.1") (compat "29.1.4.4") (dash "2.19.1") (git-commit "3.3.0") (magit-section "3.3.0") (seq "2.24") (transient "0.5.3") (with-editor "3.3.2"))
  
  ;; SPDX-License-Identifier: GPL-3.0-or-later
  
